@@ -209,10 +209,10 @@ class Shapes(GLScene,
         pass
     
     def button_motion(self, width, height, event):
-        if event.state == gtk.gdk.BUTTON1_MASK:
+        if event.state & gtk.gdk.BUTTON1_MASK:
             self.rotx = self.rotx + ((event.y-self.beginy)/width)*360.0
             self.roty = self.roty + ((event.x-self.beginx)/height)*360.0
-        elif event.state == gtk.gdk.BUTTON2_MASK:
+        elif event.state & gtk.gdk.BUTTON2_MASK:
             self.depth = self.depth - ((event.y-self.beginy)/(height))*50.0;
         
         if self.depth > 130.0: self.depth = 130.0;
